--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - db-network
     restart: always
     healthcheck:
-      test: ['CMD', 'mysqladmin -uroot -ppassword', 'ping', '-h', 'localhost']
+      test: ['CMD', 'mysqladmin', 'ping']
       timeout: 30s
       retries: 5
       start_period: 30s
