--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,6 @@
-[package]
-name = "sea-orm-actix-4-beta-example"
-version = "0.1.0"
-authors = ["Sam Samai <sam@studio2pi.com.au>"]
-edition = "2021"
-publish = false
+[workspace]
 
-[dependencies]
-actix-files = "0.6"
-actix-http = "3"
-actix-rt = "2.7"
-actix-service = "2"
-actix-web = "4"
-
-tera = "1.15.0"
-dotenv = "0.15"
-listenfd = "0.5"
-serde = "1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-entity = { path = "entity" }
-migration = { path = "migration" }
-actix-redis = "0.12.0"
-actix = "0.13.0"
-serde_json = "1.0.85"
-
-[dependencies.sea-orm]
-version = "^0.9.0" # sea-orm version
-features = [
-  "debug-print",
-  "runtime-actix-native-tls",
-  "sqlx-mysql",
-  # "sqlx-postgres",
-  # "sqlx-sqlite",
+members = [
+    "apps/core",
+    "apps/core/packages/*",
 ]
