--- a/k8s/app-deployment.yml
+++ b/k8s/app-deployment.yml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: actix-example-service
-  namespace: actix-example-local
+  # namespace: actix-example-local
 spec:
-  replicas: 8
+  replicas: 6
   selector:
     matchLabels:
       app: actix-example
