--- a/k8s/app-svc.yml
+++ b/k8s/app-svc.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: actix-example
-  namespace: actix-example-local
+  # namespace: actix-example-local
 spec:
   type: LoadBalancer
   selector:
