--- a/apps/core/Cargo.toml
+++ b/apps/core/Cargo.toml
@@ -19,7 +19,7 @@ fake = "2.5.0"
 listenfd = "1.0.0"
 migration = { path = "packages/migration" }
 rand = "0.8.5"
-sea-orm = { version = "0.9.2", features = ["debug-print", "runtime-actix-native-tls", "sqlx-mysql"] }
+sea-orm = { version = "0.9.2", features = ["debug-print", "runtime-actix-native-tls", "sqlx-postgres"] }
 serde = "1.0.144"
 serde_json = "1.0.85"
 tera = "1.17.0"
