--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,24 +18,25 @@ services:
       retries: 5
       start_period: 30s
 
-  mysql:
-    image: mysql:5.7
-    volumes:
-      - ./data/mysql:/var/lib/mysql
-    user: '${UID_GID}'
-    ports:
-      - '3306:3306'
-    environment:
-      MYSQL_ROOT_PASSWORD: 'password'
+  db:
+    image: postgres:14.1-alpine
+    restart: always
     networks:
       - db-network
-    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=actix_example
+    ports:
+      - '5432:5432'
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD', 'mysqladmin', 'ping']
-      timeout: 30s
+      test: ['CMD-SHELL', 'pg_isready', '-d', 'db_prod']
+      interval: 30s
+      timeout: 60s
       retries: 5
       start_period: 30s
-      interval: 1m30s
 
 networks:
   db-network:
