--- a/k8s/app-deployment.yml
+++ b/k8s/app-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: actix-example-service
-  namespace: actix-example-local
+  # namespace: actix-example-local
 spec:
   replicas: 6
   selector:
